Added an Embed video

--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
             </div>
             <div class="modal-body">
               <p>Video should play here. Not working yet.</p>
-              <iframe src="https://www.youtube.com/watch?v=M0Jc4sP0BEE" frameborder="0" allowfullscreen>></iframe>
+              <!-- I added en embed video of What I think you want to show. If you want to use a different video, just change the link. Carlos -->
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/BLkPl3x37TA" frameborder="0" allowfullscreen></iframe>
+              </div>
             </div>
            </div>
           </div>
