--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
  </head>
 
  <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-    <!-- Responsive Navigation Bar -->
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+   <!-- Responsive Navigation Bar -->
+   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
      <div class="navbar-header page-scroll">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
       <span class="icon-bar"></span>
@@ -39,7 +39,7 @@
        <li><a class="page-scroll" href="#resources">RESOURCES</a></li>
 			</ul>
 		 </div>
-		</nav>
+	 </nav>
 
     <!-- Page Content -->
     <div class="container">
@@ -62,9 +62,9 @@
      <section class="section" id="instructions">
       <div class="row">
        <div class="col-md-5 image-section">
-          <img class="img-responsive" alt="to_do" src="img/instruction.jpg">
+          <img class="img-responsive" src="img/instruction.jpg" alt="instructions" >
        </div>
-       <div class="col-md-7">
+       <div class="col-md-7 text-section">
         <h1>INSTRUCTIONS</h1>
         <p>
          <ol>
@@ -76,55 +76,57 @@
         </p>
         <br>
         <p>Before you start, take the short quiz below to figure out how much you know about the orchestra.</p>
-        <button class="roundBtn" id="prequizLink" data-toggle="modal" data-target="#modal-prequiz">
-         <a><i class="fa fa-edit"></i></a>
-        </button>
+        <p class="text-center"><button class="roundBtn" data-toggle="modal" data-target="#modal-quiz">
+         <a><i class="fa fa-edit"></i></a></button></p>
+      </div>
+     </div>
         <!-- Pop-Up Pre-Quiz -->
-        <div id="modal-prequiz" class="modal fade" tabindex="-1" role="dialog">
+        <div id="modal-quiz" class="modal fade" tabindex="-1" role="dialog">
          <div class="modal-dialog">
           <div class="modal-content">
            <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></button>
            </div>
-           <div class="modal-body">
-             <p>5 question quiz here. Not working yet.</p>
+           <div class="modal-body" id="quiz-container">
+         			<h1>Pre-Assessment Quiz</h1>
+            	<br/>
+           		<div id="prequiz"></div>
+              <div class="button" id="prev"><a href="#">Prev</a></div>
+             	<div class="button" id="next"><a href="#">Next</a></div>
+             	<div class="button" id="start"> <a href="#">Start Over</a></div>
            </div>
           </div>
          </div>
         </div>
-       </div>
-      </div>
     </section>
 
      <!-- Orchestra Section -->
      <section class="section" id="orchestra">
       <div class="row">
         <div class="col-md-5 image-section">
-         <img class="img-responsive" alt="orchestra" src="img/orchestra.jpg">
+         <img class="img-responsive" src="img/orchestra.jpg" alt="orchestra">
         </div>
-       <div class="col-md-7">
+       <div class="col-md-7 text-section">
         <h1>THE ORCHESTRA</h1>
         <p>The word <strong>"orchestra"</strong> came from ancient Greece and was used to describe the place where musicians and dancers performed. The modern orchestra is an ensemble of around 100 musicians playing stringed instruments, percussion, wind and brass instruments. It is mainly instrumental in nature but at times may be accompanied by a choir or a soloist.</p>
         <p>Watch the video below to see a brief overview of the orchestra.</p>
-        <button class="roundBtn" id="videoLink" data-toggle="modal" data-target="#modal-video">
-         <a><i class="fa fa-play"></i></a>
-        </button>
+        <p class="text-center"><button class="roundBtn" data-toggle="modal" data-target="#modal-video">
+         <a><i class="fa fa-play"></i></a></button></p>
+      </div>
+     </div>
          <!-- Pop-Up Video -->
          <div id="modal-video" class="modal fade" tabindex="-1" role="dialog">
-          <div class="modal-dialog">
+          <div class="modal-dialog modal-lg">
            <div class="modal-content">
             <div class="modal-header">
              <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></button>
             </div>
             <div class="modal-body">
-              <p>Video should play here. Not working yet.</p>
-              <iframe src="https://www.youtube.com/watch?v=M0Jc4sP0BEE" frameborder="0" allowfullscreen>></iframe>
+             <iframe width="853" height="480" src="https://www.youtube.com/embed/M0Jc4sP0BEE?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
             </div>
            </div>
           </div>
          </div>
-       </div>
-      </div>
      </section>
 
      <!-- Instruments Section -->
@@ -136,7 +138,7 @@
          <div class="overlay">
           <p class="overlay-text">Enter <i class="fa fa-chevron-right"></i></p>
          </div>
-			   <img class="img-responsive" alt="string_family" src="img/family/string.jpg">
+			   <img class="img-responsive" src="img/family/string.jpg" alt="string_link">
         </a>
         <div class="caption">
          <h3>STRING</h3>
@@ -148,7 +150,7 @@
          <div class="overlay">
           <p class="overlay-text">Enter <i class="fa fa-chevron-right"></i></p>
          </div>
-         <img class="img-responsive" alt="woodwind_family" src="img/family/woodwind.jpg">
+         <img class="img-responsive" src="img/family/woodwind.jpg" alt="woodwind_link">
         </a>
 			  <div class="caption">
          <h3>WOODWIND</h3>
@@ -160,7 +162,7 @@
          <div class="overlay">
           <p class="overlay-text">Enter <i class="fa fa-chevron-right"></i></p>
          </div>
-         <img class="img-responsive" alt="brass_family" src="img/family/brass.jpg">
+         <img class="img-responsive" src="img/family/brass.jpg" alt="brass_link">
         </a>
 			  <div class="caption">
          <h3>BRASS</h3>
@@ -172,7 +174,7 @@
          <div class="overlay">
           <p class="overlay-text">Enter <i class="fa fa-chevron-right"></i></p>
          </div>
-         <img class="img-responsive" alt="percussion_family" src="img/family/percussion.jpg">
+         <img class="img-responsive" src="img/family/percussion.jpg" alt="percussion_link">
         </a>
 			  <div class="caption">
          <h3>PERCUSSION</h3>
@@ -185,9 +187,9 @@
   <section class="section" id="resources">
 	 <div class="row">
     <div class="col-md-5 image-section">
-     <img class="img-responsive" alt="resource" src="img/resource.jpg">
+     <img class="img-responsive" src="img/resource.jpg" alt="resources">
     </div>
-		<div class="col-md-7">
+		<div class="col-md-7 text-section">
       <h1>RESOURCES</h1>
       <p>Want to know more about the orchestra? Check out the following resources.</p>
      <!-- Resources Tabs -->
@@ -284,6 +286,7 @@
     </div>
    </div>
   </footer>
+ </div>
 
    <!-- jQuery Script -->
    <script src="js/jquery.min.js"></script>
@@ -291,6 +294,5 @@
    <script src="js/bootstrap.min.js"></script>
    <!-- My Scripts -->
    <script src="js/scripts.js"></script>
-  </div>
  </body>
 </html>
