edited instrument content & finished readme file

--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
         </p>
         <br>
         <p>Before you start, take the short quiz below to figure out how much you know about the orchestra.</p>
-        <p class="text-center"><button class="roundBtn" data-toggle="modal" data-target="#modal-quiz">
+       <div class="text-center">
+        <button class="roundBtn" data-toggle="modal" data-target="#modal-quiz">
          <a><i class="fa fa-edit"></i></a></button></p>
+       </div>
       </div>
      </div>
         <!-- Pop-Up Pre-Quiz -->
@@ -110,8 +112,10 @@
         <h1>THE ORCHESTRA</h1>
         <p>The word <strong>"orchestra"</strong> came from ancient Greece and was used to describe the place where musicians and dancers performed. The modern orchestra is an ensemble of around 100 musicians playing stringed instruments, percussion, wind and brass instruments. It is mainly instrumental in nature but at times may be accompanied by a choir or a soloist.</p>
         <p>Watch the video below to see a brief overview of the orchestra.</p>
-        <p class="text-center"><button class="roundBtn" data-toggle="modal" data-target="#modal-video">
-         <a><i class="fa fa-play"></i></a></button></p>
+        <div class="text-center">
+        <button class="roundBtn" data-toggle="modal" data-target="#modal-video">
+         <a><i class="fa fa-play"></i></a></button>
+       </div>
       </div>
      </div>
          <!-- Pop-Up Video -->
